--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
     "react-three-fiber": "^6.0.13",
+    "react-toastify": "^9.1.3",
     "three": "^0.152.2",
     "web-vitals": "^2.1.4"
   },
